feat: update application configuration, add compile service, and enhance terminal controller

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/online_c_compiler
     username: root
-    password: 345258
+    password: Hemingyang321!
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 file:
