--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,13 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
   datasource:
-    url: jdbc:mysql://localhost:3306/online_c_compiler
+    url: jdbc:mysql://mysql:3306/online_c_compiler
     username: root
     password: Hemingyang321!
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      connection-timeout: 30000
+      initialization-fail-timeout: 30000
 
 file:
   upload-dir: ./data/upload/
@@ -28,3 +31,4 @@ docker:
   images:
     ubuntu: ubuntu-24.04
   host: npipe:////./pipe/docker_engine
+
