--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
   datasource:
-    url: jdbc:mysql://mysql:3306/online_c_compiler
+    url: jdbc:mysql://localhost:3306/online_c_compiler
     username: root
     password: Hemingyang321!
     driver-class-name: com.mysql.cj.jdbc.Driver
