--- a/login-service/src/main/resources/application.yml
+++ b/login-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: upload-service
+    name: login-service
   datasource:
     url: jdbc:mysql://localhost:3306/online_c_compiler
     username: root
