--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>common</module>
         <module>upload-service</module>
         <module>compile-service</module>
+        <module>login-service</module>
     </modules>
 
     <properties>
@@ -95,6 +96,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <version>2023.0.1.2</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
