feat: implement config service with JWT support and update application configuration

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <module>login-service</module>
         <module>debug-service</module>
         <module>terminal-service</module>
+        <module>config-service</module>
+        <module>gate-way</module>
     </modules>
 
     <properties>
