--- a/login-service/src/main/resources/application.yml
+++ b/login-service/src/main/resources/application.yml
@@ -11,4 +11,6 @@ spring:
       initialization-fail-timeout: 30000
   cloud:
     nacos:
-      server-addr: 127.0.0.1:8848
+      discovery:
+        server-addr: 127.0.0.1:8848
+        enabled: true
