--- a/upload-service/src/main/resources/application.yml
+++ b/upload-service/src/main/resources/application.yml
@@ -16,3 +16,7 @@ spring:
         file-extension: yaml          # 配置文件格式（yaml/properties）
         namespace: public                # 命名空间（可选）
         group: DEFAULT_GROUP          # 配置分组（可选）
+      config:
+        file-extension: yaml          # 配置文件格式（yaml/properties）
+        namespace: public                # 命名空间（可选）
+        group: DEFAULT_GROUP          # 配置分组（可选）
